Name:             UMM
Version:          0.2.1
Homepage:         https://github.com/np/umm
Author:           Uwe Hollerbach <uh@alumni.caltech.edu>
Maintainer:       Nicolas Pouillard <np.umm@nicolaspouillard.fr>
Synopsis:         A small command-line accounting tool
Description:      This is a very minimal command-line program to read a
                  plain-text ledger file and display balance information
                  and other reports. I could have used hledger or ledger
                  for this, but I had some things I wanted to do a little
                  differently... so I did.
License:          GPL
License-File:     LICENSE
Cabal-Version:    >= 1.2
Build-Type:       Simple
Category:         Finance

Executable        umm
  Build-Depends:  base >= 4 && < 5, parsec, old-time
  Main-is:        UMM.hs
  GHC-Options:    -Wall -fno-warn-unused-do-bind
  Other-Modules:  UMMData
                  UMMParser
                  UMMEval
                  UMMHelp
